# random_quote_generator

./: .flake8  LICENSE  pyproject.toml
.github/workflows/: branch.yaml  release.yaml
docs/: Makefile  conf.py  index.rst
random_quote_generator/: __init__.py  get_quote.py  quotes.py
tests/: test_get_quote.py
