[tool.poetry]
name = "random_quote_generator"
version = "0.1.0"
description = ""
authors = ["Jan Giacomelli <jan@typless.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest-cov = "^2.10.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"
bandit = "^1.7.0"
safety = "^1.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
